# mch2022_ticketbot

./: README.md  setup.cfg  setup.py
sopel_mch2022-ticketbot/: __init__.py  sold.py
