[metadata]
name = sopel-mch2022-ticketbot
version = 0.1.0
description = A plugin to fetch sold ticket count from our ticketshop
author = hp197
author_email = hp197@ifcat.org
url = https://github.com/hp197/mch2022_ticketbot
license = Eiffel Forum License, version 2
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
python_requires = >=3.6, <4
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.0,<8
    requests

[options.entry_points]
sopel.plugins =
    sopel-mch2022-ticketbot = sopel_mch2022-ticketbot.sold
